--- a/Spring/app/src/main/res/layout/activity_main.xml
+++ b/Spring/app/src/main/res/layout/activity_main.xml
@@ -6,38 +6,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context="com.jrdrew.spring.app.MainActivity"
+    android:id="@+id/container">
 
     <TextView
-        android:id="@+id/id_label"
-        android:text="@string/id_label"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/content_label"
-        android:text="@string/content_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/id_label"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:id="@+id/id_value"
-        android:text="@string/id_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/id_label"
-        android:layout_marginLeft="50dp" />
-
-    <TextView
-        android:id="@+id/content_value"
-        android:text="@string/content_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/content_label"
-        android:layout_alignLeft="@+id/id_value" />
 
 </RelativeLayout>
